--- a/src/app/profile/admin-profile/admin-profile.component.html
+++ b/src/app/profile/admin-profile/admin-profile.component.html
@@ -31,7 +31,7 @@
       <nz-form-item>
         <nz-form-label nzSpan="24" class="fw-bold">E-mail</nz-form-label>
         <nz-form-control nzSpan="12" [nzErrorTip]="emailErrorTpl">
-          <input nz-input type="email" formControlName="email" (ngModelChange)="validateEmail()">
+          <input nz-input type="email" formControlName="email">
         </nz-form-control>
         <ng-template #emailErrorTpl let-control>
           <div *ngIf="control.invalid && (control.touched || control.dirty)">
@@ -41,7 +41,7 @@
             <div *ngIf="control.errors?.email">
               Please input valid email!
             </div>
-            <div *ngIf="control.errors?.emailTaken">
+            <div *ngIf="control?.hasError('emailTaken')">
               This email has already been taken!
             </div>
           </div>
@@ -56,6 +56,9 @@
             <div *ngIf="control.invalid && (control.touched || control.dirty)">
               <div *ngIf="control.errors?.required">
                 Please input contact number!
+              </div>
+              <div *ngIf="control?.hasError('invalidContactNo')">
+                Please input valid contact number.
               </div>
             </div>
           </ng-template>
