- Updated year at footer - Rename application to CWSS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -82,6 +82,6 @@
         <router-outlet></router-outlet>
       </div>
     </nz-content>
-    <nz-footer>Health Support System for Aulong Community Service Centre ©2021</nz-footer>
+    <nz-footer>Community Welfare Support System for Aulong Community Service Centre ©{{year}}</nz-footer>
   </nz-layout>
 </nz-layout>
