- Hide forget password in settings

--- a/src/app/settings/account-setting/account-setting.component.html
+++ b/src/app/settings/account-setting/account-setting.component.html
@@ -79,8 +79,8 @@
               [disabled]="!passwordForm.valid || !passwordForm.touched || !passwordForm.dirty"
               (click)="updatePassword()">Update Password
       </button>
-      <br><br>
-      <p nz-typography>Forgot password? <a [routerLink]="['/reset']">Reset here</a>.</p>
+<!--      <br><br>-->
+<!--      <p nz-typography>Forgot password? <a [routerLink]="['/reset']">Reset here</a>.</p>-->
     </nz-form-control>
   </nz-form-item>
 </form>
