- Add passwordValidator to resetPasswordComponent

--- a/src/app/user/reset-password/reset-password.component.html
+++ b/src/app/user/reset-password/reset-password.component.html
@@ -1,5 +1,5 @@
 <nz-steps [nzCurrent]="currentStep">
-  <nz-step nzTitle="Request Password Reset"></nz-step>
+  <nz-step nzTitle="Request"></nz-step>
   <nz-step nzTitle="Enter OTP"></nz-step>
   <nz-step nzTitle="Change Password"></nz-step>
 </nz-steps>
