- Appointment datetime is optional when admin is adding assistance record for community user - Handle 403 error when using holiday API

--- a/src/app/assistance/assistance-form/assistance-form.component.html
+++ b/src/app/assistance/assistance-form/assistance-form.component.html
@@ -49,7 +49,7 @@
   </nz-form-item>
 
   <nz-form-item>
-    <nz-form-label [nzSpan]="24" class="fw-bold" nzRequired>Meeting Date</nz-form-label>
+    <nz-form-label [nzSpan]="24" class="fw-bold" [nzRequired]="!isAdmin">Meeting Date</nz-form-label>
     <nz-form-control [nzSpan]="24" [nzErrorTip]="dateErrorTpl">
       <nz-date-picker formControlName="date" (ngModelChange)="initTimeSlotDropdownChoice()" [nzDisabledDate]="disabledDate"></nz-date-picker>
       <ng-template #dateErrorTpl let-control>
@@ -63,7 +63,7 @@
   </nz-form-item>
 
   <nz-form-item>
-    <nz-form-label [nzSpan]="24" class="fw-bold" nzRequired>Meeting Time</nz-form-label>
+    <nz-form-label [nzSpan]="24" class="fw-bold" [nzRequired]="!isAdmin">Meeting Time</nz-form-label>
     <nz-form-control [nzSpan]="24" [nzErrorTip]="timeErrorTpl">
       <nz-select nzAllowClear nzShowSearch formControlName="time" [nzPlaceHolder]="form.controls['date'].value ? 'Please select a timeslot' : 'Please select a date first'">
         <nz-option *ngFor="let choice of timeslotList" [nzLabel]="choice?.text" [nzValue]="choice?.value" [nzDisabled]="choice?.disabled"></nz-option>
