--- a/src/app/user/community-user/community-user.component.html
+++ b/src/app/user/community-user/community-user.component.html
@@ -87,6 +87,16 @@
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
+        <nz-form-label [nzSpan]="24" class="fw-bold">Account Status</nz-form-label>
+        <nz-form-control [nzSpan]="24">
+          <nz-select formControlName="isActive">
+            <nz-option [nzLabel]="'All'" [nzValue]="'A'"></nz-option>
+            <nz-option [nzValue]="'Y'" [nzLabel]="'Activated'"></nz-option>
+            <nz-option [nzValue]="'N'" [nzLabel]="'Unactivated'"></nz-option>
+          </nz-select>
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
         <nz-form-control>
           <nz-space>
             <button *nzSpaceItem nz-button nzType="primary" (click)="getCommunityUsers()">Search
@@ -146,7 +156,8 @@
     <td>{{data?.contactNo || "-"}}</td>
     <td>{{data?.address?.fullAddress || "-"}}</td>
     <td>
-      <nz-tag [nzColor]="'green'" *ngIf="data?.accIsActivate === 'Y'">Activated</nz-tag>
+      <nz-tag [nzColor]="'magenta'" *ngIf="data?.accIsActivate === 'Y' && data?.accIsBlocked === 'Y'">Blocked</nz-tag>
+      <nz-tag [nzColor]="'green'" *ngIf="data?.accIsActivate === 'Y' && data?.accIsBlocked === 'N'">Activated</nz-tag>
       <nz-tag [nzColor]="'orange'" *ngIf="data?.accIsActivate !== 'Y'">Unactivated</nz-tag>
     <td>
       <button nz-button nz-dropdown [nzClickHide]="false" [nzDropdownMenu]="menu1">
