--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -8,3 +8,9 @@
   <app-user-profile [userProfile]="userProfile" [isLoading]="isLoading"
                     (refreshEventEmitter)="refreshProfile($event)"></app-user-profile>
 </div>
+
+<nz-result *ngIf="!adminProfile && !userProfile" nzStatus="404" nzTitle="404" [nzSubTitle]="errorPageSubtitle">
+  <div nz-result-extra>
+    <button nz-button nzType="primary" (click)="goBackPreviousPage()">Back</button>
+  </div>
+</nz-result>
