--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,5 +1,5 @@
 <nz-row>
-  <nz-col [nzSm]="24" [nzMd]="4" class="mb-4 pe-4">
+  <nz-col [nzXs]="12" [nzLg]="8" [nzXl]="4" class="mb-4 pe-4">
     <nz-card>
       <form nz-form [formGroup]="form" class="w-100">
         <nz-form-item>
@@ -13,7 +13,7 @@
       </form>
     </nz-card>
   </nz-col>
-  <nz-col [nzSm]="24" [nzMd]="20">
+  <nz-col [nzXs]="24" [nzLg]="16" [nzXl]="20">
     <ng-container [ngSwitch]="optionIdFormControl.value">
       <app-account-setting *ngSwitchCase="'account'"></app-account-setting>
       <app-activity-log *ngSwitchCase="'activity-log'"></app-activity-log>
